[gd_scene load_steps=7 format=2]

[ext_resource path="res://rooms/room_a_dropbox.gd" type="Script" id=1]
[ext_resource path="res://entities/GenericRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/ControllablePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://rooms/objects/Dropbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/ExchangePopup.tscn" type="PackedScene" id=5]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 435, 360, 45, 360, 95, 195, 391, 285, 385, 195, 396, 230, 381, 240, 413.36, 288.588 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 2 ), PoolIntArray( 2, 6, 3 ), PoolIntArray( 0, 3, 7 ) ]
outlines = [ PoolVector2Array( 45, 360, 95, 195, 385, 195, 396, 230, 381, 240, 391, 285, 413.36, 288.588, 435, 360 ) ]

[node name="room_a_dropbox" type="Node2D"]
script = ExtResource( 1 )

[node name="GenericRoom" parent="." instance=ExtResource( 2 )]
west_door = 3
west_target = "room_a_001"

[node name="ControllablePlayer" parent="GenericRoom" instance=ExtResource( 3 )]
position = Vector2( 130.589, 274.447 )
z_index = 274

[node name="Navigation2D" type="Navigation2D" parent="GenericRoom"]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="GenericRoom/Navigation2D"]
position = Vector2( -1, 0 )
navpoly = SubResource( 1 )

[node name="Objects" type="Node2D" parent="GenericRoom"]

[node name="Dropbox" parent="GenericRoom/Objects" instance=ExtResource( 4 )]
position = Vector2( 445, 270 )
for_player_b = false

[node name="ExchangePopup" parent="." instance=ExtResource( 5 )]
